--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
